--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div class="root"></div>
+    <div class="root" id="root"></div>
     <script type="module" src="./index.ts"></script>
 </body>
 </html>
